# task-tracker-cli

./: .gitignore  README-FR.md  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
application/: task_service.py
cli/: cli_formatter.py  commands.py  commands_impl.py
data/: tasks.json
domain/: entities.py
infrastructure/: json_repository.py
src/task_cli/: main.py
src/task_cli/application/: task_service.py
src/task_cli/cli/: cli_formatter.py  commands_impl.py
src/task_cli/data/: tasks.json
src/task_cli/domain/: entities.py
src/task_cli/infrastructure/: json_repository.py
tests/: command.py  test_commands.py  test_formatter.py  test_handle_command.py  test_json_repository.py  test_task_service.py
tests/data/src/task_cli/data/: tasks.json
tests/integration/: test_integration.py
tests/unit/: test_commands.py  test_formatter.py  test_json_repository.py  test_task_service.py
utils/: date_formatter.py
